# miloro

./: .gitignore  ARCHITECTURE.md  LAUNCH_PACK.md  MiLoro.desktop  README.md  README_ALPHA.md  REPORT.md  ROADMAP.md  ROADMAP_B2B_pyme.md  ROADMAP_FASE1.md  ROADMAP_FASE2.md  ROADMAP_FASE3.md  become_pro_client.sh  miloro-launcher.sh  package-lock.json  package.json  roadmap.md  tsconfig.json  vite.config.ts
.github/: SETUP_REPO.md
.github/workflows/: build.yml  release.yml
backend/: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  test_issue.sh  tsconfig.json  vitest.config.ts  wrangler.toml
backend/migrations/: 0001_init.sql  0002_usage.sql
backend/scripts/: deploy_backend_prod.sh  deploy_landing_prod.sh  dev_promote_to_pro.sh  dev_signup_test.sh  dev_test_resend_direct.sh  fingerprint_stub.py  gh_to_r2.sh  load_secrets.sh  publish_release.sh  release_update.sh  setup_kv_updater.sh  setup_r2_releases.sh  setup_stripe_prices.sh  test_signup.sh  verify_release.sh
backend/src/: audit.ts  email.ts  index.ts  licenses.ts  ratelimit.ts  schema.ts  stripe.ts  types.ts  updater.ts  util.ts
backend/test/: license.test.ts  setup.ts
cli/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
cli/parla_voice/: __init__.py  __main__.py  autotype.py  cli.py  client.py  config.py  daemon.py  notify.py  recorder.py
clientes/piloto_construccion_familiar/: acuerdo_simple.md  checklist_setup_oficina.md  email_seguimiento.md  faq_anticipadas.md  metricas_piloto.md  propuesta_1pag.md  report.md  script_llamada.md
content/blog/: 01-dictado-vs-escribir-comparativa-metricas.md  02-ai-act-eu-afecta-tu-pyme.md  03-whisper-local-como-funciona-privacy.md  04-caso-real-despacho-contable-valencia-12h-semana.md  05-comparativa-wispr-parla-dragon-pyme-espanola.md
demo/: README.md  install.sh  uninstall.sh
demo/scripts/: escuchar.sh  oido_client.py  oido_daemon.py
demo/share/: oido-daemon.service.template
desktop/: .gitignore  README.md  build_signed.sh  copy_release_to_downloads.sh  index.html  install_local_user.sh  package-lock.json  package.json  release_v0_0_1.sh  setup_dev_linux.sh
desktop/src/: App.svelte  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  model_manager.rs  whisper.rs
desktop/src/lib/: i18n.ts  license.ts  settings.ts
desktop/src/locales/: ca.json  de.json  en.json  es.json  fr.json  it.json
desktop_app/docs/: PLAN_DOGFOODING.md  STATUS.md
desktop_app/mockup/: index.html
desktop_app/server/: app.py  parla-config-server.service
desktop_app/tests/: test_e2e.sh
landing/: i18n.js  index.html  style.css
landing/checkout/cancelled/: index.html
landing/checkout/success/: index.html
landing/dashboard/: index.html
landing/functions/updater/: [[path]].js
landing/get-started/: index.html
landing/locales/: ca.json  de.json  en.json  es.json  fr.json  it.json
landing/signup/: index.html
legal/: PRIVACY.md  REFUND.md  TERMS.md  dpa_template.md  faq_legal_pyme.md  whitepaper_ai_act_parla.md
outreach/: plantilla_construccion.md  pymes_construccion.md
pricing/: competencia.md  competencia_deep.md  pricing_recomendado.md  report.md
software/: REPORT.md  benchmark.py  benchmark_results.json  rewriter.py
software/corpus/: sentences_es.txt
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs  ptt.rs
src/lib/: CustomSelect.svelte  fingerprint.ts  license.ts  settings.ts
validacion/: plan_pymes_piloto.md
