[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parla-voice"
version = "0.1.0"
description = "Local-first voice dictation: bind a hotkey, speak, your text appears at the cursor."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Marc Albiol", email = "marc@therefactorlabs.com" },
]
keywords = [
    "voice",
    "dictation",
    "speech-to-text",
    "whisper",
    "faster-whisper",
    "stt",
    "linux",
    "cli",
    "accessibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/therefactorlabs/parla-voice"
Source = "https://github.com/therefactorlabs/parla-voice"
Issues = "https://github.com/therefactorlabs/parla-voice/issues"

[project.scripts]
parla = "parla_voice.cli:main"
parla-voice = "parla_voice.cli:main"

[tool.setuptools]
packages = ["parla_voice"]

[tool.setuptools.package-data]
parla_voice = ["py.typed"]
